Increased structure flexibility and updated pom
Pom now builds platform independent and has the latest versions.

This version still does not work! Please wait for version 1 to be
released.

--- a/pom.xml
+++ b/pom.xml
@@ -1,44 +1,49 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>SuperParser</groupId>
-  <artifactId>SuperParser</artifactId>
-  <version>0.0.2-SNAPSHOT</version>
-  <name>SuperParser</name>
-  <description>A combination of NFCParser and HSTReader with a few extra bells and whistles.</description>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.0</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-      <plugin>
-      	<groupId>org.apache.maven.plugins</groupId>
-      	<artifactId>maven-shade-plugin</artifactId>
-      	<version>2.1</version>
-      	<executions>
-      		<execution>
-      			<phase>package</phase>
-      			<goals>
-      				<goal>shade</goal>
-      			</goals>
-      			<configuration>
-      				<transformers>
-      					<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-      						<manifestEntries>
-      							<Main-Class>Main</Main-Class>
-      							<Build-Number>2</Build-Number>
-      						</manifestEntries>
-      					</transformer>
-      				</transformers>
-      			</configuration>
-      		</execution>
-      	</executions>
-      </plugin>
-    </plugins>
-  </build>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>SuperParser</groupId>
+	<artifactId>SuperParser</artifactId>
+	<version>0.0.3-SNAPSHOT</version>
+	<name>SuperParser</name>
+	<description>A combination of NFCParser and HSTReader with a few extra bells and whistles.</description>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<build>
+		<sourceDirectory>src</sourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<transformers>
+								<transformer
+									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+									<manifestEntries>
+										<Main-Class>SuperParser</Main-Class>
+										<Build-Number>2</Build-Number>
+									</manifestEntries>
+								</transformer>
+							</transformers>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
