Updated the pom to include build numbers

--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>SuperParser</groupId>
+	<groupId>com.myuplay</groupId>
 	<artifactId>SuperParser</artifactId>
-	<version>0.0.6-SNAPSHOT</version>
+	<version>0.0.6</version>
 	<name>SuperParser</name>
 	<description>A combination of NFCParser and HSTReader with a few extra bells and whistles.</description>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<build>
+		<finalName>${project.artifactId}-${project.version}-r${buildNumber}</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>buildnumber-maven-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<phase>validate</phase>
+						<goals>
+							<goal>create</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<doCheck>false</doCheck>
+					<doUpdate>false</doUpdate>
+					<shortRevisionLength>6</shortRevisionLength>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -36,7 +55,7 @@
 									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<manifestEntries>
 										<Main-Class>SuperParser</Main-Class>
-										<Build-Number>6</Build-Number>
+										<Build-Number>${buildNumber}</Build-Number>
 									</manifestEntries>
 								</transformer>
 							</transformers>
@@ -46,4 +65,16 @@
 			</plugin>
 		</plugins>
 	</build>
+	<scm>
+		<url>scm:git:https://github.com/tyduptyler13/SuperParser/</url>
+		<connection>scm:git:https://github.com/tyduptyler13/SuperParser.git</connection>
+	</scm>
+	<ciManagement>
+		<system>Jenkins</system>
+		<url>http://ci.myuplay.com/job/SuperParser/</url>
+	</ciManagement>
+	<issueManagement>
+		<url>https://github.com/tyduptyler13/SuperParser/issues</url>
+		<system>Github</system>
+	</issueManagement>
 </project>
